correction de l'overflow du bouton "prévisualiser"

--- a/src/app/modules/client/components/client-project-edit/client-project-edit.component.scss
+++ b/src/app/modules/client/components/client-project-edit/client-project-edit.component.scss
@@ -133,6 +133,8 @@ $primary-color: #3498DB;
     background: transparent;
     border: 2px solid white;
     color: white;
+    white-space: normal;
+    height: auto;
     margin-bottom: 20px;
   }
 
